add new predicate class